# cpp-wasm.simple-cad

./: .dockerignore  .gitignore  AGENTS.md  AI_IMPLEMENTATION_PROMPT.md  AUDIT_REPORT.md  AUDIT_REPORT_2025-12-27.md  AUDIT_REPORT_FINAL.md  App.tsx  CLAUDE.md  CLEANUP_PLAN.md  CLEANUP_REPORT.md  CODEBASE_AUDIT_REPORT.md  CONTRIBUTING.md  CPP_AUDIT_REPORT.md  DESIGN.md  DXF_ANALYSIS_REPORT.md  DXF_TEXT_IMPORT_REPORT.md  ELECTRICAL_ARCHITECTURE.md  ENGINE_FIRST_GUIDELINES.md  ENGINE_FIRST_MASTER_PLAN.md  FINALIZATION_PLAN.md  FIX_SUMMARY.md  FRONTEND_REVIEW_REPORT.md  IMPLEMENTATION_PLAN.md  INVESTIGATION_REPORT.md  LICENSES.md  Makefile  PERF_BENCHMARK.md  PLAN.md  PR_PLAN.md  README.md  REPORT.md  REPORT_EXECUTION.md  SELECTION_HANDLES_ELLIPSE_ROTATION_AUDIT_REFINED.md  SELECTION_HANDLES_ROOT_CAUSE_V2.md  SELECTION_OVERLAY_HANDLERS_AUDIT.md  STUDY-TEXT-MVP-AUDIT.md  TRANSFER_REPORT.md  UI_SYSTEM_AUDIT_REPORT.md  build_log.txt  (+8 more)
.Jules/: palette.md
.claude/: settings.local.json
.github/: CODEOWNERS  pull_request_template.md
.jules/: bolt.md  palette.md  (+1 more)
cpp/: CMakeLists.txt  engine.cpp
cpp/build_test/: CMakeCache.txt
cpp/engine/: bindings.cpp  command_dispatch.cpp  command_dispatch.h  commands.cpp  commands.h  electrical.cpp  electrical.h  engine.h  engine_digest.cpp  engine_event.cpp  engine_overlay.cpp  engine_protocol_types.h  engine_render.cpp  engine_snapshot.cpp  engine_text.cpp  engine_upsert.cpp  entity_manager.cpp  entity_manager.h  history_manager.cpp  history_manager.h  history_types.h  interaction_session.cpp  interaction_session.h  pick_system.cpp  pick_system.h  render.cpp  render.h  selection_manager.cpp  selection_manager.h  snapshot.cpp  snapshot.h  string_utils.h  text_system.cpp  text_system.h  types.h  util.h  vector_ir.h  vector_tessellation.cpp  vector_tessellation.h
cpp/engine/command/: command_dispatch.cpp  command_dispatch.h  commands.cpp
cpp/engine/core/: logging.h  string_utils.h  types.h
cpp/engine/entity/: entity_manager.cpp  entity_manager.h  selection_manager.cpp
cpp/engine/history/: history_manager.cpp  history_manager.h  history_types.h
cpp/engine/impl/: engine_digest.cpp  engine_event.cpp  engine_overlay.cpp  engine_query.cpp  engine_render.cpp  engine_snapshot.cpp  engine_style.cpp  engine_text.cpp  engine_upsert.cpp
cpp/engine/interaction/: interaction_draft.cpp  interaction_log.cpp  interaction_session.cpp  interaction_session.h  interaction_session_begin.cpp  interaction_session_helpers.h  interaction_session_update.cpp  interaction_types.h  pick_system.cpp  snap_solver.cpp  snap_solver.h  snap_types.h
cpp/engine/internal/: engine_state.cpp  engine_state.h  engine_state_aliases.h  engine_state_aliases_undef.h
cpp/engine/persistence/: snapshot.cpp  snapshot.h  snapshot_build.cpp  snapshot_internal.h
cpp/engine/plugin/: engine_plugin_api.h
cpp/engine/protocol/: protocol_types.h
cpp/engine/render/: render.cpp  render.h  vector_ir.h
cpp/engine/text/: atlas_packer.cpp  font_manager.cpp  font_manager.h  glyph_atlas.cpp  glyph_atlas.h  text_caret.cpp  text_layout.cpp  text_layout.h  text_navigation.cpp  text_selection_rects.cpp  text_shaping.cpp  text_store.cpp  text_store.h  text_style_contract.h  text_types.h
cpp/tests/: commands_test.cpp  determinism_test.cpp  electrical_test.cpp  engine_core_test.cpp  engine_draft_test.cpp  engine_handles_test.cpp  engine_test.cpp  engine_transform_test.cpp  event_stream_test.cpp  glyph_atlas_test.cpp  history_test.cpp  interactive_transform_perf_test.cpp  layer_flags_test.cpp  overlay_query_test.cpp  protocol_info_test.cpp  render_test.cpp  selection_order_test.cpp  snapshot_test.cpp  style_system_test.cpp  test_accessors.h  text_commands_edit_test.cpp  text_commands_regression_test.cpp  text_commands_style_test.cpp  text_commands_test.cpp  text_commands_upsert_test.cpp  text_fixes_test.cpp  text_layout_test.cpp  text_render_topology_test.cpp  text_store_test.cpp  vector_tessellation_test.cpp
engine-extracted/: CMakeLists.txt  MILESTONE_1_REPORT.md  MILESTONE_2_REPORT.md  MILESTONE_3_REPORT.md  README.md
engine-extracted/bindings/: bindings.cpp
engine-extracted/docs/: BUILD.md  FEATURES.md  INTEGRATION.md
engine-extracted/examples/minimal-webgl2/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
engine-extracted/examples/minimal-webgl2/public/wasm/: .gitignore
engine-extracted/examples/minimal-webgl2/scripts/: sync-wasm.mjs
engine-extracted/examples/minimal-webgl2/src/: main.ts  style.css
engine-extracted/include/engine/: engine.h  engine_protocol_types.h
engine-extracted/scripts/: build_native.sh  build_wasm.sh
engine-extracted/src/: engine.cpp
engine-extracted/src/engine/command/: command_dispatch.cpp  commands.cpp
engine-extracted/src/engine/core/: types.h
engine-extracted/src/engine/entity/: entity_manager.h
engine-extracted/src/engine/history/: history_manager.cpp  history_types.h
engine-extracted/src/engine/impl/: engine_digest.cpp  engine_event.cpp  engine_query.cpp  engine_snapshot.cpp  engine_style.cpp
engine-extracted/src/engine/interaction/: interaction_draft_stub.cpp  interaction_log.cpp  interaction_session_begin.cpp  interaction_session_rotate.cpp  interaction_session_rotate_stub.cpp  interaction_session_update.cpp  pick_system.cpp  pick_system.h  snap_solver.h
engine-extracted/src/engine/internal/: engine_state.cpp
engine-extracted/src/engine/persistence/: snapshot.cpp  snapshot.h  snapshot_internal.h
engine-extracted/src/engine/render/: render.cpp  vector_tessellation.cpp
engine-extracted/src/engine/text/: atlas_packer.h  glyph_atlas.h  text_layout.cpp  text_store.h  text_types.h
engine-extracted/src/msdfgen_config/msdfgen/: msdfgen-config.h
engine-extracted/tests/: commands_test.cpp  engine_core_test.cpp  engine_snap_test.cpp  engine_transform_test.cpp  minimal_profile_test.cpp  overlay_query_test.cpp  render_test.cpp  style_system_test.cpp  text_commands_style_test.cpp  text_commands_upsert_test.cpp  text_layout_test.cpp  text_render_topology_test.cpp  vector_tessellation_test.cpp
(+951 files in other folders)
